--- a/css/duvidas.css
+++ b/css/duvidas.css
@@ -35,7 +35,7 @@ input[type=text]:focus {
 
 .caso {
     margin-top: 25px;
-    width: 500px;
+    max-width: 500px;
 }
   
 .tt {
@@ -105,6 +105,7 @@ input[type=text]:focus {
   
 .pesquisar {
     margin-top: 20px;
+    border: none;
 }
   
 .fac input:hover {
