--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,8 @@
 .inicio {
     background-color: transparent;
     color: white;
-    height: 700px;
+    min-height: 500px;
+    max-height: 700px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -184,6 +185,7 @@
     }
     .inicio h1 {
         margin: 0;
+        width: 350px;
     }
 
     .como-funfa h2 {
@@ -202,4 +204,6 @@
     .discord h2 {
         display: none;
     }
+
+    
 }
